Revert "Add more complete direction control to LogicalSortExpression. (#2796)"
This reverts commit 275187b28b78d607ba2098a332111dd752eecb1a.